--- a/sass/phone.scss
+++ b/sass/phone.scss
@@ -1,86 +1,22 @@
-@media all and (max-width: 768px) {
-    @import "utils/variables";
+@import "utils/variables";
     @import "utils/mixins";
-
-    @import "base/animations";
+    @import "utils/animations";
 
     @import "layout/navigation";
     @import "layout/header";
-    @import "layout/footer";
+    // @import "layout/footer";
 
     @import "components/buttons";
 
     @import "pages/contact";
 
+
+@media all and (max-width: 768px) {
+    
     * {
         padding: 0;
         margin: 0;
     }
-
-    // .visible-dish-wrap {
-    //     position: relative;
-    //     width: 95%;
-    //     background-color: #fff;
-    //     border-radius: 30px;
-    //     margin: 15px;
-    //     overflow: hidden;
-    //     box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
-
-    //     &:hover {
-    //         width: 96%;
-    //         cursor: pointer;
-    //         transform: rotate(360deg);
-    //     }
-
-    // }
-
-    // .dish-wrap-palette {
-    //     position: relative;
-    //     width: 150%;
-    //     display: flex;
-    //     align-items: center;
-    //     justify-content: space-between;
-    //     transition: width 1s ease-out 100ms;
-
-    //     >.check {
-    //         .fa-check-circle {
-    //             font-size: 35px;
-    //             color: #fff;
-    //             background-color: $third-color;
-    //             border-radius: 50%;
-    //             border: 1px solid $third-color;
-    //             transition: transform 1s ease-in 10ms;
-    //         }
-    //     }
-
-    //     &:hover {
-    //         width: 100%;
-
-    //         >.check {
-    //             .fa-check-circle {
-    //                 transform: rotate(360deg);
-    //             }
-    //         }
-    //     }
-
-
-    // }
-
-    // .dish-info-palette {
-    //     display: inline-block;
-    //     // width: 70%;
-    //     // padding-left: 15px;
-    //     // margin: 0 50px 0 10px;
-    //     overflow: hidden;
-    //     white-space: nowrap;
-
-    //     >p {
-    //         // width: 80%;
-    //         overflow: hidden;
-    //         white-space: nowrap;
-    //         text-overflow: ellipsis;
-    //     }
-    // }
 
     .container {
         animation-name: container;
@@ -125,7 +61,6 @@
         justify-content: center;
         align-items: center;
         background-color: #9356DC;
-        // padding: 10px;
         box-shadow: rgb(11 10 10 / 18%) 0px 13px 12px 0px inset;
 
         input {
@@ -176,7 +111,7 @@
             }
         }
 
-        button {
+        .button {
             background-color: $secondary-color;
             padding: 17px 30px;
             color: white;
@@ -289,7 +224,6 @@
     }
 
     .rst-ad {
-        // position: relative;
         background-color: #fff;
         border-radius: 18px;
         margin: 20px;
@@ -358,28 +292,19 @@
 
     }
 
-    // .main-heart{
-    //     position: absolute;
-    //     left: 360px;
-    // }
-
     .main-heart1 {
-        // width: auto;
         font-size: 30px;
         color: gray;
         position: sticky;
         left: 665px;
-        //  margin: 255px 410px; 
         opacity: 1;
     }
 
     .main-heart2 {
-        // width: auto;
         font-size: 30px;
         position: sticky;
         left: 10px;
         opacity: 0;
-        // margin: 255px 410px;
 
         &:hover {
             opacity: 1;
@@ -425,8 +350,6 @@
         @include heart;
     }
 
-    // .menu-section {}
-
     .dish {
         @include dish;
     }
@@ -437,9 +360,8 @@
     }
 
     .visible-dish-wrap {
-        // outline: 1px solid yellow;
-        // position: relative;
-        width: 95%;
+        position: relative;
+        width: 93%;
         background-color: #fff;
         border-radius: 20px;
         margin: 15px;
@@ -449,26 +371,25 @@
         box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
 
         &:hover {
-            width: 95%;
+            width: 93%;
             cursor: pointer;
             transform: rotate(360deg);
 
             .dish-wrap {
-                width: 100%;
+                width: 96%;
             }
 
             .dish-info {
-                width: 85%;
 
                 >p {
-                    width: 70%;
+                    width: 345px;
                     overflow: hidden;
                     white-space: nowrap;
                     text-overflow: ellipsis;
                 }
 
                 >h3 {
-                    width: 70%;
+                    width: 350px;
                     overflow: hidden;
                     white-space: nowrap;
                     text-overflow: ellipsis;
@@ -476,44 +397,25 @@
             }
         }
 
-        // display: flex;
-
     }
 
     .dish-wrap {
-        // outline: 1px solid red;
-        // position: relative;
-        width: 124%;
+        width: 131%;
         display: flex;
         margin-left: 10px;
 
-        // align-items: center;
-        // justify-content: space-between;
-        // transition: width 1s ease-out 100ms;
-        // &:hover {
-        //     width: 60%;
-        //     .dish-info {
-
-        //         >p {
-        //             width:90%;
-        //             overflow: hidden;
-        //             white-space: nowrap;
-        //             text-overflow: ellipsis;
-        //         }
-        // }
         &:hover {
             >.check {
                 .fa-check-circle {
-                    font-size: 35px;
+                    font-size: 25px;
                     color: #fff;
                     background-color: $third-color;
                     border-radius: 50%;
                     border: 1px solid $third-color;
-                    transition: transform 1s ease-in 10ms;
+                    transition: transform 1s ease-out 10ms;
+                    margin: 30px;
                 }
             }
-
-
 
             >.check {
                 .fa-check-circle {
@@ -523,79 +425,24 @@
         }
     }
 
-
-
-
-    // &:hover {
-    //     width: fit-content;
-    //     cursor: pointer;
-    //     transform: rotate(360deg);
-    // }
-
-    .dish-info {
-    //     // outline: 1px solid blue;
-        width: 95%;
-        /* padding-left: 15px; */
-        // margin-left: 15px;
-        // overflow: hidden;
-        // white-space: nowrap;
-
-        // >p {
-        //     // width:100%;
-        //     overflow: hidden;
-        //     white-space: nowrap;
-        //     text-overflow: ellipsis;
-        // }
-
-        // &:hover {
-        //     width: 60%;
-        //     >p {
-        //         // width:100%;
-        //         overflow: hidden;
-        //         white-space: nowrap;
-        //         text-overflow: ellipsis;
-        // }
-    }
-
     .dish-price {
-        padding-right: 15px;
+        padding-right: 10px;
     }
 
     .check {
         background-color: #99E2D0;
         border-radius: 0 20px 20px 0;
-        width: 100px;
-        height: 95px;
-        // margin: 0 0 0 -30px;
-        // position: absolute;
-        // right: 0px;
-        // bottom: 0px;
-        // z-index: -1;
+        width: 120px;
+        height: 90px;
     }
-
-    .fa-check-circle {
-        font-size: 35px;
-        color: #fff;
-        background-color: $third-color;
-        border-radius: 50;
-        transition: transform 1s;
-        margin: 28px 32px;
-        // position: absolute;
-    }
-
-
-
-
-
-
 
     .order {
         @include btn-order;
     }
 
-    footer {
-        @include footer;
-    }
+    // footer {
+    //     @include phone-footer;
+    // }
 
     // THE ENCHANTED PLATE RESTAURANT'S SITE
 
@@ -637,103 +484,13 @@
 
     }
 
-    // .visible-dish-wrap {
-    //     position: relative;
-    //     // width: 93%;
-    //     background-color: #fff;
-    //     border-radius: 30px;
-    //     margin: 15px;
-    //     overflow: hidden;
-    //     box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
-
-    //     &:hover {
-    //         width: fit-content;
-    //         cursor: pointer;
-    //         transform: rotate(360deg);
-    //     }
-
-    // }
-
-    // .dish-wrap-plate {
-    //     position: relative;
-    //     width: 150%;
-    //     display: flex;
-    //     align-items: center;
-    //     transition: width 1s ease-out 100ms;
-
-    //     >.check {
-    //         .fa-check-circle {
-    //             font-size: 35px;
-    //             color: #fff;
-    //             background-color: $third-color;
-    //             border-radius: 50%;
-    //             border: 1px solid $third-color;
-    //             transition: transform 1s ease-in 10ms;
-    //         }
-    //     }
-
-    //     &:hover {
-    //         width: 100%;
-
-    //         >.check {
-    //             .fa-check-circle {
-    //                 transform: rotate(360deg);
-    //             }
-    //         }
-    //     }
-
-    //     .dish-info-plate {
-    //         display: inline-block;
-    //         width: 55%;
-    //         padding-left: 15px;
-    //         margin: 0 50px 0 10px;
-    //         overflow: hidden;
-    //         white-space: nowrap;
-
-    //         >p {
-    //             width: 80%;
-    //             overflow: hidden;
-    //             white-space: nowrap;
-    //             text-overflow: ellipsis;
-    //         }
-    //     }
-    // }
-
-    // .container {
-    //     animation-name: container;
-    //     animation-duration: 3s;
-    // }
-
-    // .check {
-    //     background-color: #99E2D0;
-    //     border-radius: 0 25px 25px 0;
-    //     width: 100px;
-    //     height: 95px;
-    //     // margin: 0 0 0 -30px;
-    //     // position: absolute;
-    //     // right: 0px;
-    //     // bottom: 0px;
-    //     // z-index: -1;
-    // }
-
-    // .fa-check-circle {
-    //     font-size: 35px;
-    //     color: #fff;
-    //     background-color: $third-color;
-    //     border-radius: 50%;
-    //     transition: transform 1s;
-    //     margin: 28px 32px;
-    //     // position: absolute;
-    // }
-
-
     .order {
         @include btn-order;
     }
 
-    footer {
-        @include footer;
-    }
+    // footer {
+    //     @include footer;
+    // }
 
     // LE GOURMAND RESTAURANT'S SITE
 
@@ -774,103 +531,13 @@
 
     }
 
-    // .visible-dish-wrap {
-    //     position: relative;
-    //     // width: 93%;
-    //     background-color: #fff;
-    //     border-radius: 30px;
-    //     margin: 15px;
-    //     overflow: hidden;
-    //     box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
-
-    //     &:hover {
-    //         width: fit-content;
-    //         cursor: pointer;
-    //         transform: rotate(360deg);
-    //     }
-
-    // }
-
-    // .dish-wrap-gourmand {
-    //     position: relative;
-    //     width: 150%;
-    //     display: flex;
-    //     align-items: center;
-    //     transition: width 1s ease-out 100ms;
-
-    //     >.check {
-    //         .fa-check-circle {
-    //             font-size: 35px;
-    //             color: #fff;
-    //             background-color: $third-color;
-    //             border-radius: 50%;
-    //             border: 1px solid $third-color;
-    //             transition: transform 1s ease-in 10ms;
-    //         }
-    //     }
-
-    //     &:hover {
-    //         width: 100%;
-
-    //         >.check {
-    //             .fa-check-circle {
-    //                 transform: rotate(360deg);
-    //             }
-    //         }
-    //     }
-
-    //     .dish-info-gourmand {
-    //         display: inline-block;
-    //         width: 55%;
-    //         padding-left: 15px;
-    //         margin: 0 50px 0 10px;
-    //         overflow: hidden;
-    //         white-space: nowrap;
-
-    //         >p {
-    //             width: 80%;
-    //             overflow: hidden;
-    //             white-space: nowrap;
-    //             text-overflow: ellipsis;
-    //         }
-    //     }
-    // }
-
-    // .container {
-    //     animation-name: container;
-    //     animation-duration: 3s;
-    // }
-
-    // .check {
-    //     background-color: #99E2D0;
-    //     border-radius: 0 25px 25px 0;
-    //     width: 100px;
-    //     height: 95px;
-    //     // margin: 0 0 0 -30px;
-    //     // position: absolute;
-    //     // right: 0px;
-    //     // bottom: 0px;
-    //     // z-index: -1;
-    // }
-
-    // .fa-check-circle {
-    //     font-size: 35px;
-    //     color: #fff;
-    //     background-color: $third-color;
-    //     border-radius: 50%;
-    //     transition: transform 1s;
-    //     margin: 28px 32px;
-    //     // position: absolute;
-    // }
-
-
     .order {
         @include btn-order;
     }
 
-    footer {
-        @include footer;
-    }
+    // footer {
+    //     @include footer;
+    // }
 
     // BASTILLE RESTAURANT'S SITE
 
@@ -911,101 +578,12 @@
 
     }
 
-    // .visible-dish-wrap {
-    //     position: relative;
-    //     // width: 93%;
-    //     background-color: #fff;
-    //     border-radius: 30px;
-    //     margin: 15px;
-    //     overflow: hidden;
-    //     box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
-
-    //     &:hover {
-    //         width: fit-content;
-    //         cursor: pointer;
-    //         transform: rotate(360deg);
-    //     }
-
-    // }
-
-    // .dish-wrap-bastille {
-    //     position: relative;
-    //     width: 150%;
-    //     display: flex;
-    //     align-items: center;
-    //     transition: width 1s ease-out 100ms;
-
-    //     >.check {
-    //         .fa-check-circle {
-    //             font-size: 35px;
-    //             color: #fff;
-    //             background-color: $third-color;
-    //             border-radius: 50%;
-    //             border: 1px solid $third-color;
-    //             transition: transform 1s ease-in 10ms;
-    //         }
-    //     }
-
-    //     &:hover {
-    //         width: 100%;
-
-    //         >.check {
-    //             .fa-check-circle {
-    //                 transform: rotate(360deg);
-    //             }
-    //         }
-    //     }
-
-    //     .dish-info-bastille {
-    //         display: inline-block;
-    //         width: 55%;
-    //         padding-left: 15px;
-    //         margin: 0 50px 0 10px;
-    //         overflow: hidden;
-    //         white-space: nowrap;
-
-    //         >p {
-    //             width: 80%;
-    //             overflow: hidden;
-    //             white-space: nowrap;
-    //             text-overflow: ellipsis;
-    //         }
-    //     }
-    // }
-
-    // .container {
-    //     animation-name: container;
-    //     animation-duration: 3s;
-    // }
-
-    // .check {
-    //     background-color: #99E2D0;
-    //     border-radius: 0 25px 25px 0;
-    //     width: 100px;
-    //     height: 95px;
-    //     // margin: 0 0 0 -30px;
-    //     // position: absolute;
-    //     // right: 0px;
-    //     // bottom: 0px;
-    //     // z-index: -1;
-    // }
-
-    // .fa-check-circle {
-    //     font-size: 35px;
-    //     color: #fff;
-    //     background-color: $third-color;
-    //     border-radius: 50%;
-    //     transition: transform 1s;
-    //     margin: 28px 32px;
-    //     // position: absolute;
-    // }
-
     .order {
         @include btn-order;
     }
 
-    footer {
-        @include footer;
-    }
+    // footer {
+    //     @include footer;
+    // }
 
 }
